feat: make song titles unique
