# openapi.json
@@ -1766,6 +1766,16 @@
                 }
               }
             }
+          },
+          "409": {
+            "description": "Title already taken",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
           }
         },
         "security": [
@@ -1876,6 +1886,16 @@
           },
           "404": {
             "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "Title already taken",
             "content": {
               "application/json": {
                 "schema": {
